Fix nav spacing for mobile view

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ nav{
     z-index: 9;
     display: flex;
     justify-content: space-around;
+    padding-left: 0;
 }
 
 nav a{
